refactor: cleaning up codes, simplifying and refactoring